Resolve nav styles on responsive/alignment

--- a/style.css
+++ b/style.css
@@ -10,10 +10,7 @@ p,span,h1,h1,h3,h4,h5,h6{
 }
 ul{ list-style-type: none; }
 img{object-fit:cover;}
-.logo img{
-    position:relative;
-    left:-35%;
-}
+
 
 .hidden{ visibility:hidden!important; }
 .light-theme{
@@ -60,4 +57,7 @@ img{object-fit:cover;}
         padding:var(--padding-lg);
     }
     .nav-header.desktop{ display:none; }
+}
+@media screen and (max-width:500px){
+    .nav-header .options p{font-size:0.75rem;}
 }
